os::die() does not honor CreateCoredumpOnCrash option

XMLWordPrintable

    • b24
    • generic
    • generic

        During my investigation of the following bug:

            JDK-8188872 runtime/ErrorHandling/TimeoutInErrorHandlingTest.java fails intermittently

        I determined that TimeoutInErrorHandlingTest.java was still
        generating core files even though -XX:-CreateCoredumpOnCrash
        was specified.

        I tracked the issue down to the os::die() function.

        It makes more sense to split the fix for this issue from JDK-8188872,
        but they will be tested and likely pushed together.

              Assignee:
              Daniel Daugherty
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: