8224793: os::die() does not honor CreateCoredumpOnCrash option

Reviewed-by: kbarrett, dholmes, stuefe